--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/avcdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 management.security.enabled = false
+management.endpoints.web.exposure.include=*
 
+ # Pretty-print JSON responses
+ spring.jackson.serialization.indent_output=true
