--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/avcdb?useSSL=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/avcdbJPA?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 management.security.enabled = false
 management.endpoints.web.exposure.include=*
 
  # Pretty-print JSON responses
- spring.jackson.serialization.indent_output=true
+spring.jackson.serialization.indent_output=true
+ 
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
