first try with JPA to add supplier

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -8,7 +8,7 @@ management.endpoints.web.exposure.include=*
  # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
  
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
