--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jackson.serialization.indent_output=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.default-property-inclusion=non_null
