--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -13,4 +13,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jackson.default-property-inclusion=non_null
+#spring.jackson.default-property-inclusion=non_null
+
+#avc.collections.batch-size=10
