--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 hibernate.jdbc.batch_size=30
 hibernate.order_inserts=true
+hibernate.order_updates=true
+hibernate.jdbc.batch_versioned_data=true
+
 
 #spring.jackson.default-property-inclusion=non_null
 
