--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -13,6 +13,8 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.open-in-view=false
+
 hibernate.jdbc.batch_size=30
 hibernate.order_inserts=true
 hibernate.order_updates=true
