added some documentation

--- a/beta/pom.xml
+++ b/beta/pom.xml
@@ -104,10 +104,10 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-envers</artifactId>
-	    <version>${hibernate.version}</version>
-</dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-envers</artifactId>
+		    <version>${hibernate.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -116,6 +116,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-javadoc-plugin</artifactId>
+		        <version>3.2.0</version>
+             </plugin>
 		</plugins>
 	</build>
 
