--- a/beta/pom.xml
+++ b/beta/pom.xml
@@ -108,6 +108,12 @@
 		    <artifactId>hibernate-envers</artifactId>
 		    <version>${hibernate.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
