--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -20,6 +20,8 @@ hibernate.order_inserts=true
 hibernate.order_updates=true
 hibernate.jdbc.batch_versioned_data=true
 
+jwt.secret=sgmdps23890&#(!&(#jfsgnakg
+
 
 #spring.jackson.default-property-inclusion=non_null
 
