--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -22,6 +22,7 @@ hibernate.jdbc.batch_versioned_data=true
 
 jwt.secret=sgmdps23890&#(!&(#jfsgnakg
 
+spring.main.allow-bean-definition-overriding=true
 
 #spring.jackson.default-property-inclusion=non_null
 
