running on cloud

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/avcdbJPA?useSSL=false
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
+spring.cloud.gcp.sql.database-name=avcdbjpa
+spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
+#spring.datasource.username=li.tzvi
 spring.datasource.password=root
 management.security.enabled = false
 management.endpoints.web.exposure.include=*
