--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
-spring.cloud.gcp.sql.database-name=avcdbjpa
-spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
+#spring.cloud.gcp.sql.database-name=avcdbjpa
+#spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
 spring.datasource.username=root
 spring.datasource.password=root
 management.security.enabled = false
 management.endpoints.web.exposure.include=*
 
 #convert dates to database according to UTC
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+#spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
  # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
