--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
 #spring.cloud.gcp.sql.database-name=avcdbjpa
 #spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
