--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,30 +1,51 @@
+ # DDL generation
 spring.jpa.hibernate.ddl-auto=update
+
+ # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
 #spring.cloud.gcp.sql.database-name=avcdbjpa
 #spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
 spring.datasource.username=root
 spring.datasource.password=root
+
+ # security
 management.security.enabled = false
 management.endpoints.web.exposure.include=*
 
-#convert dates to database according to UTC
+ # convert dates to database according to UTC
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+
+ # insert in batches
+#hibernate.jdbc.batch_size=20
+#hibernate.order_inserts=true
+#hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_size=2
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+# spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
  # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
- 
-#spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+ # showing sql logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.jdbc=debug
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.generate_statistics=true
+#org.hibernate=DEBUG
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
-spring.jpa.open-in-view=false
 
-hibernate.jdbc.batch_size=30
-hibernate.order_inserts=true
-hibernate.order_updates=true
-hibernate.jdbc.batch_versioned_data=true
+#org.hibernate.engine.jdbc.batch.internal.BatchingBatch=true
+
+
+
+#spring.jpa.open-in-view=false
 
 jwt.secret=sgmdps23890&#(!&(#jfsgnakg
 
