--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -31,10 +31,10 @@ spring.jackson.serialization.indent_output=true
  # showing sql logs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 # logging.level.org.hibernate.jdbc=debug
 #logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.jpa.properties.hibernate.generate_statistics=true
 #org.hibernate=DEBUG
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
