fixed session-in-view to false

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+ # persistence session from view(rest controller)
+ # spring should not open a persistence context session from the controller method.
+ 	# e.g. calling add and get for a city (by id) in the same view, city won't have the country.
+ 	# calling other services not from the database will still keep the connection open.
+ 	# Changes can be made to the object outside of the @Transacional method.
+spring.jpa.open-in-view=false
+
+
  # security
 management.security.enabled = false
 management.endpoints.web.exposure.include=*
@@ -20,7 +28,7 @@ management.endpoints.web.exposure.include=*
 #hibernate.jdbc.batch_size=20
 #hibernate.order_inserts=true
 #hibernate.order_updates=true
-spring.jpa.properties.hibernate.jdbc.batch_size=2
+spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 # spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
@@ -44,8 +52,6 @@ logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 #org.hibernate.engine.jdbc.batch.internal.BatchingBatch=true
 
 
-
-#spring.jpa.open-in-view=false
 
 jwt.secret=sgmdps23890&#(!&(#jfsgnakg
 
