changed generate ddl to none

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,5 +1,5 @@
  # DDL generation
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
  # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
