PoRow has a PoCodeBasic

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -30,8 +30,12 @@ management.endpoints.web.exposure.include=*
 #hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-# spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
+#when using identity strategy can't batch inserts
+# spring.jpa.properties.hibernate.order_inserts=true 
+#commented because executing batch on single updates - which is the usual scenario
+#spring.jpa.properties.hibernate.order_updates=true 
+spring.jpa.properties.hibernate.batch_fetch_style=PADDED
+spring.jpa.properties.hibernate.default_batch_fetch_size=25
 
  # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
