using group_concat of mySql

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.datasource.password=root
  	# Changes can be made to the object outside of the @Transacional method.
 spring.jpa.open-in-view=false
 
+# for registering SQL functions in hibernate
+spring.jpa.properties.hibernate.metadata_builder_contributor=com.avc.mis.beta.utilities.SqlFunctionsMetadataBuilderContributor
+
+
 
  # security
 management.security.enabled = false
