changed to jpa validations added po info for WarehouseManagement#getProcessItemByItem

--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.metadata_builder_contributor=com.avc.mis.beta.utilities.SqlFunctionsMetadataBuilderContributor
 
 # defining validation groups
-spring.jpa.properties.javax.persistence.validation.group.pre-update = com.avc.mis.beta.entities.settings.OnUpdate, javax.validation.groups.Default
-spring.jpa.properties.javax.persistence.validation.group.pre-persist = com.avc.mis.beta.entities.settings.OnPersist, javax.validation.groups.Default
+spring.jpa.properties.javax.persistence.validation.group.pre-update = com.avc.mis.beta.validation.groups.OnUpdate, javax.validation.groups.Default
+spring.jpa.properties.javax.persistence.validation.group.pre-persist = com.avc.mis.beta.validation.groups.OnPersist, javax.validation.groups.Default
 
 
  # security
