--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -1,13 +1,20 @@
- # DDL generation
-spring.jpa.hibernate.ddl-auto=update
+#server.port=5000
+#spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+#spring.datasource.username=${RDS_USERNAME}
+#spring.datasource.password=${RDS_PASSWORD}
 
  # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/avcdbjpa?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ebdb-test?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=309864890
+
+ # DDL generation
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
 #spring.cloud.gcp.sql.database-name=avcdbjpa
 #spring.cloud.gcp.sql.instance-connection-name=animated-rhythm-274402:asia-southeast1:avc-beta
-spring.datasource.username=root
-spring.datasource.password=root
 
  # persistence session from view(rest controller)
  # spring should not open a persistence context session from the controller method.
@@ -15,6 +22,9 @@ spring.datasource.password=root
  	# calling other services not from the database will still keep the connection open.
  	# Changes can be made to the object outside of the @Transacional method.
 spring.jpa.open-in-view=false
+
+# don't apply @NotNull to ddl, e.g. storage references no storage but UsedItem does, although they inherit the same field.
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
 
 # for registering SQL functions in hibernate
 spring.jpa.properties.hibernate.metadata_builder_contributor=com.avc.mis.beta.utilities.SqlFunctionsMetadataBuilderContributor
