--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -41,6 +41,9 @@ management.endpoints.web.exposure.include=*
  # convert dates to database according to UTC
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
+ # generate only power of 2 'in' clauses
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding = true
+
  # insert in batches
 #hibernate.jdbc.batch_size=20
 #hibernate.order_inserts=true
