--- a/beta/src/main/resources/application-prod.properties
+++ b/beta/src/main/resources/application-prod.properties
@@ -5,6 +5,9 @@ spring.datasource.password=${RDS_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+ # generate only power of 2 'in' clauses
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding = true
+
  # DDL generation
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -51,16 +54,16 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=25
 spring.jackson.serialization.indent_output=true
 
  # showing sql logs
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 # logging.level.org.hibernate.jdbc=debug
 #logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.jpa.properties.hibernate.generate_statistics=true
 #org.hibernate=DEBUG
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+#logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
 
 #org.hibernate.engine.jdbc.batch.internal.BatchingBatch=true
