--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ebdb-test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=309864890
 
+ # generate only power of 2 'in' clauses
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding = true
+
  # DDL generation
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -41,9 +44,6 @@ management.endpoints.web.exposure.include=*
  # convert dates to database according to UTC
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
- # generate only power of 2 'in' clauses
-spring.jpa.properties.hibernate.query.in_clause_parameter_padding = true
-
  # insert in batches
 #hibernate.jdbc.batch_size=20
 #hibernate.order_inserts=true
@@ -61,12 +61,12 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=25
 spring.jackson.serialization.indent_output=true
 
  # showing sql logs
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#--spring.jpa.show-sql=true
+#--spring.jpa.properties.hibernate.show_sql=true
+#--spring.jpa.properties.hibernate.format_sql=true
 # logging.level.org.hibernate.jdbc=debug
 #logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#--logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.jpa.properties.hibernate.generate_statistics=true
 #org.hibernate=DEBUG
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
