--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
  # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ebdb-test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ebdb-pub1.1?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=309864890
 
