--- a/beta/src/main/resources/application.properties
+++ b/beta/src/main/resources/application.properties
@@ -71,6 +71,8 @@ spring.jackson.serialization.indent_output=true
 #org.hibernate=DEBUG
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+#logging.level.org.hibernate.persister.entity=ERROR
+#logging.level.root=ERROR
 
 
 #org.hibernate.engine.jdbc.batch.internal.BatchingBatch=true
